# 2022_IN204_ASCII-Art

./: .gitignore  README.md  TODOs  main.cpp  makefile
FirstOpenCV/: CMakeLists.txt  DisplayImage.cpp
MakeFolder/: CMakeLists.txt
src/: CMakeLists.txt  Converter.h  ImageConverter.h  README.txt  VideoConverter.h  main.cpp  screen.h
src/GUI/: ConvertFile.h  MainWindow.h  WebConference.h  Webcam.h  dimensions.h  screen.h  screen_1.h  tmp2.cpp
src/converters/: Converter.h  ImageConverter.h  VideoConverter.h
src/networkConnection/: client.h  client_tcp.h  server.h  server_tcp.h  tcp_c.cpp  tcp_s.cpp
src/utils/: utils.h
src/~Util/: ~util.h
